fix/ nav alignement

--- a/style.css
+++ b/style.css
@@ -20,12 +20,21 @@ body {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+    color: #2e373b;
+    margin: 0 0.75rem 0 0.75rem;
+}
+
+button {
+    font-size: 1.5rem;
+}
 
 nav {
     z-index: 1;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     position: fixed;
     top: 0;
     right: 0;
@@ -44,17 +53,36 @@ nav > a:nth-child(3), a:nth-child(4) {
         display: flex;
     }
 }
-nav > img {
-    object-fit:cover;
-    width: 100px;
-    height: 100px;
+nav img {
+    display: none;
+    object-fit: cover;
+    width: 80px;
+    height: 80px;
 }
-a {
-    text-decoration: none;
-    color: #2e373b;
-    margin: 0 0.75rem 0 0.75rem;
+@media screen and (min-width: 900px) {
+    nav img {
+        display: block;
+    }
+
 }
-nav > a:nth-child(2) {
+.nav-left,
+.nav-right {
+    display: flex;
+    align-items: center;
+}
+.nav-center {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.nav-right a {
+    display: none;
+    @media screen and (min-width: 900px) {
+            display: flex;
+            margin-right: 25px;
+    }
+}
+#dog-and-tof {
     font-size: 3rem;
 }
 
@@ -156,7 +184,7 @@ header > button {
 }
 .img-your-dog > figure > figcaption {
     text-align: center;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     margin-bottom: 25px; 
 }
 
@@ -342,6 +370,7 @@ header > button {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    margin-right: 25px;
     @media screen and (min-width: 900px) {
         display: none;
     }
